# pz-parallelism

./: Cargo.toml  README.md
benchmarking/: run_circuit_benchmarking.sh
circuits/: gen_millionaire.py  millionaire.txt  millionaire_small.txt
src/: main.rs
tests/: test_bools.rs  test_jank_bools.rs
